--- a/Views/Curso/VerCurso.cshtml
+++ b/Views/Curso/VerCurso.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container">
         <br>
-        <div class="row">
+        <div style="display: flex; justify-content: space-between;">
             <div class="col-lg-6">
                 <img class="rounded"
                     src="data:image/png;base64,@Model.fileBase64"
