--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -19,6 +19,10 @@
          <li class="nav-item">
             <a class="nav-link color"  asp-controller="Pago" asp-action="Pendientes">Pagos pendientes</a>
         </li> 
+
+        <li class="nav-item">
+            <a class="nav-link color" asp-controller="Inscripciones" asp-action="verCursos">Inscripciones</a>
+        </li>
     
     }else {
 
