--- a/Views/Inscripciones/verCursos.cshtml
+++ b/Views/Inscripciones/verCursos.cshtml
@@ -8,6 +8,10 @@
            <input type="text" placeholder="Buscar Curso" id="nombreCurso">
     </div>
 
+    <div class="form-group">
+          <a class="btn btn-success" asp-controller="Inscripciones" asp-action="listCursosAndCantInscritos">Ver Reporte de inscripciones</a>
+    </div>
+
 
    <div id="seccion">
 
