--- a/Views/Inscripciones/verInscritosByCurso.cshtml
+++ b/Views/Inscripciones/verInscritosByCurso.cshtml
@@ -7,7 +7,7 @@
 @if(Model.Count == 0)
 {
     <div class="alert alert-info">
-        <strong>No hay alumnos inscritos en este curso</strong>
+        <strong class="text-center">No hay alumnos inscritos en este curso</strong>
     </div>
 }
 @if(Model.Count > 0)
