--- a/Views/Curso/ListarCursos.cshtml
+++ b/Views/Curso/ListarCursos.cshtml
@@ -252,7 +252,8 @@
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
-            confirmButtonText: 'Si eliminar!'
+            confirmButtonText: 'Si eliminar!',
+            cancelButtonText: 'Cancelar'
             }).then((result) => {
             if (result.isConfirmed) {
                 
