--- a/Views/Pago/Pendientes.cshtml
+++ b/Views/Pago/Pendientes.cshtml
@@ -155,7 +155,8 @@
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
-            confirmButtonText: 'Si, aprobar pago!'
+            confirmButtonText: 'Si, aprobar pago!',
+            cancelButtonText: 'Cancelar'
           }).then((result) => {
             if (result.value) {
 
@@ -197,7 +198,8 @@
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
-            confirmButtonText: 'Si, rechazar pago!'
+            confirmButtonText: 'Si, rechazar pago!',
+            cancelButtonText: 'Cancelar'
           }).then((result) => {
             if (result.value) {
 
