--- a/Views/Module/verInfoCurso.cshtml
+++ b/Views/Module/verInfoCurso.cshtml
@@ -15,7 +15,7 @@
     Usuario myidentity = await Task.Run(() => UserManager.GetUserAsync(User));
     var roles = await Task.Run(() => UserManager.GetRolesAsync(myidentity));
 
-
+    var owner = ViewBag.isOwner;
     
     var idSeccion = ViewBag.idSeccion;
     modulos = ViewBag.modulos;
@@ -122,7 +122,7 @@
 
         <div style="padding: 10px;">
 
-          @if(roles.Contains("profesor")){
+          @if(roles.Contains("profesor") && owner == true){
 
             <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal" >Agregar una Seccion</button>
           
@@ -155,7 +155,7 @@
                       }
                 </ul>
 
-                @if(roles.Contains("profesor")){
+                @if(roles.Contains("profesor") && owner == true){
 
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalUpdate" data-bs-whatever="@item.Id">Editar Seccion</button>
                     <button type="button" class="btn btn-danger" onclick="eliminarSeccion(@item.Id)">Eliminar Seccion</button>
@@ -299,7 +299,8 @@
                     showCancelButton: true,
                     confirmButtonColor: '#3085d6',
                     cancelButtonColor: '#d33',
-                    confirmButtonText: 'Si, Eliminar!'
+                    confirmButtonText: 'Si, Eliminar!',
+                    cancelButtonText: 'Cancelar'
                   }).then((result) => {
                     if (result.value) {
                      
