--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -23,8 +23,20 @@
         <li class="nav-item">
             <a class="nav-link color" asp-controller="Inscripciones" asp-action="verCursos">Inscripciones</a>
         </li>
+
+         <li class="nav-item">
+            <a class="nav-link color" asp-controller="Admin" asp-action="getRolUsers">Asignar Rol</a>
+        </li>
     
     }else {
+
+        if(roles.Contains("profesor")){
+                
+                <li class="nav-item">
+                    <a class="nav-link color" asp-controller="Curso" asp-action="CursoProfesor">Cursos Asignados</a>
+                </li>
+    
+        }
 
         <li class="nav-item">
             <a class="nav-link color"  asp-controller="Pago" asp-action="MisPedidosPendientes">Pedidos Pendientes</a>
