Deshabilitar Opcion de correo

--- a/Views/Pago/IndexPago.cshtml
+++ b/Views/Pago/IndexPago.cshtml
@@ -66,7 +66,7 @@
               <input type="text" asp-for="monto" class="form-control" id="monto" value="@monto"  disabled="disabled">
             </div>
           </div>
-          <button id="pagar" class="btn btn-primary" disabled>Pagar S./@monto<span>.00</span></button>
+          <button id="pagar" class="btn btn-primary" disabled>Pagar S./@monto</button>
           </form>
       </div>
 }
