--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -2,7 +2,7 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Profile";
-    ViewData["ActivePage"] = ManageNavPages.Index;
+    
 }
 
 <h4>@ViewData["Title"]</h4>
@@ -12,31 +12,31 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Username"></label>
+                <label asp-for="Username">Correo</label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
             <div class="form-group">
-                <label asp-for="Input.nombres"></label>
+                <label asp-for="Input.nombres">Nombre</label>
                 <input asp-for="Input.nombres" class="form-control" />
             </div>
             
             <div class="form-group">
-                <label asp-for="Input.apellidos"></label>
+                <label asp-for="Input.apellidos">Apellidos</label>
                 <input asp-for="Input.apellidos" class="form-control" />
             </div>
 
             <div class="form-group">
-                <label asp-for="Input.identificacion"></label>
+                <label asp-for="Input.identificacion">Identificacion</label>
                 <input asp-for="Input.identificacion" class="form-control" />
             </div>
 
             <div class="form-group">
-                <label asp-for="Input.direccion"></label>
+                <label asp-for="Input.direccion">Direccion</label>
                 <input asp-for="Input.direccion" class="form-control" />
             </div>
 
             <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
+                <label asp-for="Input.PhoneNumber">Celular</label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
