--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -52,7 +52,7 @@
 
 
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-controller="User" asp-action="EditarUsuario" title="Manage"> @User.Identity.Name!</a>
+        <a  class="nav-link text-dark" asp-controller="User" asp-action="EditarUsuario" title="Manage">Modificar</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
