--- a/Views/Pago/Transferencia.cshtml
+++ b/Views/Pago/Transferencia.cshtml
@@ -84,7 +84,7 @@
             </div>
             
             <div class="form-group">
-                <button id="btnPagar" type="submit" class="btn btn-info" disabled>Pagar S./@monto</button>
+                <button id="btnPagar" type="submit" class="btn btn-info" disabled>Pagar S./@monto.00</button>
             </div>
             
             </form>
