--- a/Views/Proforma/MostrarItems.cshtml
+++ b/Views/Proforma/MostrarItems.cshtml
@@ -85,7 +85,7 @@
     </div>
     
     <div>
-        <p class="text-center">Total a pagar: $./@total</p>
+        <p class="text-center">Total a pagar: $./@total<span>.00</span></p>
     </div>
 
    <div>
